kubernetes/codepod/codepod-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: codepod
  name: codepod
spec:
  selector:
    matchLabels:
      app: codepod
  replicas: 1
  template:
    metadata:
      labels:
        app: codepod
    spec:
      containers:
      - name: codepod
        image: lscr.io/linuxserver/code-server:latest
        ports:
        - containerPort: 8443
