kubernetes/codepod/codepod-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: codepod
spec:
 ports:
 - port: 8080
   targetPort: 8443
 selector:
   app: codepod
