kubernetes/codepod/codepod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: codepod
  labels:
    app: codepod
spec:
  ports:
  - name: http
    port: 8070
    targetPort: 8443
  selector:
    app: codepod
  type: ClusterIP
