kubernetes/codepod/codepod-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codepod
spec:
  tls:
    - hosts:
      - codeserver.192.168.49.2.nip.io
  rules:
  - host: codeserver.192.168.49.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: codepod
            port:
              number: 8070
