kubernetes/codepod/codeserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server-deployment
spec:
  selector:
    matchLabels:
      app: code-server
  replicas: 1
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - name: code-server
        image: lscr.io/linuxserver/code-server:latest
        ports:
        - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
 name: code-server
spec:
 ports:
 - port: 8080
   targetPort: 8443
 selector:
   app: code-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
spec:
  ingressClassName: nginx
  rules:
  - host: codeserver.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: code-server
            port:
              number: 8080
